# irods_auth_plugin_pam_interactive

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  irods_auth_plugin_pam_interactive.spec  run_test.cpp
ci/: build_package.sh  publish_package.sh  pull_image.sh
cmake/modules/: FindPAM.cmake
doc/: Components.drawio
src/: conversation.cpp  conversation.h  handshake_client.cpp  handshake_client.h  libpam_interactive.cpp  message.cpp  message.h  pam_interactive_config.cpp  pam_interactive_config.h
src/pam_handshake/: auth_check_main.cpp  handshake_session.cpp  handshake_session.h  pam_conversation.h  server.cpp  server.h  session.h
test/: test_message.cpp  test_pam.cpp  test_util.cpp
whereami/: CMakeLists.txt  LICENSE.WTFPLv2  whereami.c  whereami.cpp  whereami.hpp
